--- a/public/500.html
+++ b/public/500.html
@@ -57,10 +57,8 @@
 <body class="rails-default-error-page">
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>The input kanji was wrong</p>
+    <p>Please try again</p>
   </div>
 </body>
 </html>
